--- a/ReadMe
+++ b/ReadMe
@@ -1,21 +1,16 @@
 ================================================================
-Human Activity Recognition Using Smartphones Cleaned Dataset
 
-================================================================
-The data were taken from the Human Activity Recognition Dataset 
-Jorge L. Reyes-Ortiz, Davide Anguita, Alessandro Ghio, Luca Oneto.
+Data retrieved from the Human Activity Recognition Dataset 
 Smartlab - Non Linear Complex Systems Laboratory
 DITEN - Università degli Studi di Genova.
 Via Opera Pia 11A, I-16145, Genoa, Italy.
-activityrecognition@smartlab.ws
 www.smartlab.ws
 
-Data were made available at: https://d396qusza40orc.cloudfront.net/getdata%2Fprojectfiles%2FUCI%20HAR%20Dataset.zip
+Data found at at: https://d396qusza40orc.cloudfront.net/getdata%2Fprojectfiles%2FUCI%20HAR%20Dataset.zip
 
-Briefly, the data contains measurements made on a total of 30 subjects performing 6 activities: walking, walking upstairs, walking downstairs, standing, sitting, and laying. 
+Data contains measurements made on a total of 30 subjects performing 6 activities: walking, walking upstairs, walking downstairs, standing, sitting, and laying. 
 
 Measurements were made using the accelerometer and gyroscope of a Samsung Galaxy II smartphone worn at the hip by the participants. The participants were split into training
-
 and testing datasets in a 70%:30% ratio. Details of the measurements taken and initial processing are available in the metadata contained in the zip file and at
 
 http://archive.ics.uci.edu/ml/datasets/Human+Activity+Recognition+Using+Smartphones
@@ -23,13 +18,9 @@ http://archive.ics.uci.edu/ml/datasets/Human+Activity+Recognition+Using+Smartpho
 ================================================================
 Included Files:
 
-CleanedDataReadMe.txt
-
-CleanedDataCodeBook.txt
-
-run_analysis.R (R script to create dataset)
-
-CleanedData.txt (final data set)
+ReadMe.txt
+run_analysis.R 
+FinalData.txt 
 
 CleanedSummaryData.txt (summary data set with means of all variables by subject and activity)
 
